Update solution and wording

--- a/index.html
+++ b/index.html
@@ -1,35 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Follow-up: My Solution</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Interview Follow-Up</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 20px;
-      line-height: 1.6;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9fafb;
+      color: #1f2937;
+      max-width: 700px;
+      margin: 60px auto;
+      padding: 30px;
+      line-height: 1.7;
+      border: 1px solid #e5e7eb;
+      border-radius: 10px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.05);
     }
+
+    h1 {
+      font-size: 2em;
+      color: #111827;
+    }
+
+    h2 {
+      margin-top: 30px;
+      color: #1d4ed8;
+    }
+
     pre {
-      background: #f4f4f4;
+      background-color: #f3f4f6;
       padding: 15px;
       border-radius: 5px;
       overflow-x: auto;
+      font-family: Consolas, monospace;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #6b7280;
     }
   </style>
 </head>
 <body>
-  <h1>Thanks for the interview</h1>
-  <p>I wasn’t happy with my performance and wanted to show a better version of my solution to one of the questions.</p>
+  <h1>Hi [Recruiter's Name],</h1>
+
+  <p>
+    Thank you for the interview opportunity. I’ve been reflecting on the conversation and realized I didn’t present my best work under pressure.
+  </p>
+
+  <p>
+    I wanted to share a revised solution to one of the technical questions, as I believe it better represents my actual capabilities.
+  </p>
 
   <h2>Improved Solution</h2>
-  <pre><code>
-# Example: Python
+  <pre><code># Python – Check if string is a palindrome
 def is_palindrome(s):
     return s == s[::-1]
   </code></pre>
 
-  <p>Hope this better reflects my capabilities. Thanks again!</p>
+  <p>
+    I appreciate your time and hope this gives a better sense of how I approach problems when I'm thinking clearly.
+  </p>
+
+  <footer>
+    Kind regards,<br>
+    Itay Aharoni
+  </footer>
 </body>
 </html>
