Update message text

--- a/index.html
+++ b/index.html
@@ -49,17 +49,22 @@
   </style>
 </head>
 <body>
-  <h1>Hi [Recruiter's Name],</h1>
+  <h1>Salesforce Interview Follow-Up</h1>
 
-  <p>
-    Thank you again for the interview opportunity. I’ve been reflecting on the conversation and realized I didn’t present my best work under pressure.
-  </p>
+<p>
+  Thank you again for the interview opportunity. It was my first technical interview, and unfortunately I wasn’t able to fully express myself or demonstrate my true skills and personality.
+</p>
 
-  <p>
-    I finished the approach I was aiming for during the interview, and I believe it better reflects how I think and build solutions. I've also added a couple of utility methods that I think would be helpful in a real-world setting.
-  </p>
+<p>
+  I didn’t want to leave the wrong impression, and I don't like doing things halfway — so I took some time to complete the code I was working on during the interview. I hope this helps show what I was aiming for.
+</p>
 
-  <h2>RateLimiter – Final Solution</h2>
+<p>
+  I’ve also added a couple of utility methods that I think would be useful in a real-world setting.
+</p>
+
+
+  <h2>Final Solution</h2>
   <pre><code>import time
 from collections import deque, defaultdict
 
@@ -113,12 +118,9 @@ class RateLimiter:
         self.logsLimit[command] = new_limit
   </code></pre>
 
-  <p>
-    I appreciate your time and hope this gives a better sense of how I think when I’m clear-headed.
-  </p>
 
   <footer>
-    Kind regards,<br>
+    Appreciate your time again,<br>
     Itay Aharoni
   </footer>
 </body>
